adicionando form de contato

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,42 @@ main section.styles article h3 {
     font-weight: 400;
 }
 
+section.contato h2 {
+    text-align: center;
+    font-size: 40px;
+}
+
+section.contato form {
+    width: 500px;
+    max-width: 100%;
+    margin: 40px auto;
+}
+
+section.contato form input, section.contato form textarea {
+    width: 100%;
+    padding: 5px;
+    resize: none;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+section.contato form button {
+    width: 100%;
+    padding: 5px;
+    font-size: 16px;
+    background-color: #DC9730;
+    color: #FFFFFF;
+    border: none;
+    text-transform: uppercase;
+    border-radius: 20px;
+    font-family: 'Ropa Sans', sans-serif;
+    cursor: pointer;
+}
+
+section.contato form button:hover {
+    background-color: #51D275;
+}
+
 footer {
     background-color: #333333;
     color: #FFFFFF;
