--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,14 @@ body {
 
 header {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
+    /* projeta o elemento a frente dos outros */
+    z-index: 3;
+    /* posicionamento */
+    top: 0;
+    left: 0;
 }
 
 header .container {
@@ -180,7 +188,11 @@ section.contato form input, section.contato form textarea {
     margin-bottom: 15px;
 }
 
-section.contato form button {
+form fieldset {
+    margin: 10px 0;
+}
+
+form button {
     width: 100%;
     padding: 5px;
     font-size: 16px;
@@ -193,7 +205,7 @@ section.contato form button {
     cursor: pointer;
 }
 
-section.contato form button:hover {
+form button:hover {
     background-color: #51D275;
 }
 
@@ -217,6 +229,7 @@ footer iframe {
 
 .main-form {
     padding: 100px 0;
+    text-align: center;
 }
 
 /* Estilo para botão */
@@ -232,26 +245,6 @@ footer iframe {
 
 .contactinfo {
     font-size: 12px;
-}
-
-.form-interesse {
-    width: 100%;
-    padding: 5px;
-    resize: none;
-    margin-bottom: 15px;
-}
-
-.enviar-form-interesse {
-    width: 250px;
-    padding: 5px;
-    font-size: 16px;
-    background-color: #DC9730;
-    color: #fff;
-    border: nome;
-    text-transform: uppercase;
-    border-radius: 20px;
-    font-family: 'Ropa Sans' , sans-serif;
-    cursor: pointer;
 }
 
 @media (max-width: 900px) {
