--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ header .logo h2 {
 
 main section.banner .slide img {
     width: 100%;
+    position: relative;
+    margin-top: 40px;
 }
 
 main section.banner .container {
