--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ section.contato form {
     width: 500px;
     max-width: 100%;
     margin: 40px auto;
+    
 }
 
 section.contato form input, section.contato form textarea {
@@ -230,8 +231,9 @@ footer iframe {
 }
 
 .main-form {
-    padding: 100px 0;
+    padding: 100px 0 0 0;
     text-align: center;
+    max-width: 100%;
 }
 
 /* Estilo para botão */
@@ -243,6 +245,8 @@ footer iframe {
     display: inline-block;
     padding: 5px 15px;
     border-radius: 20px;
+    max-width: 100%;
+    width: 250px;
 }
 
 .contactinfo {
